<resources>
    <string name="app_name">文件共享大师</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_home_main">HomeMainActivity</string>

    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <!-- 首页tab切换选项卡 -->
    <string name="main_tab_app">应用</string>
    <string name="main_tab_photo">相册</string>
    <string name="main_tab_music">音乐</string>
    <string name="main_tab_video">视频</string>
    <string name="main_tab_other">其他</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello app fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_send_show">SendShowActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_transfer_show">TransferShowActivity</string>

</resources>
